<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_one"
    tools:context=".Activities.Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:background="#f2f2f2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="30dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/signupUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:inputType="text"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/signupEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/signupPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/signupPasswordConf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:hint="@string/password_conf"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/signup" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/signupProgess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/signupFailure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signupProgess"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:text="this is a sample and will be deleted"
            android:textColor="@color/red" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_login" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:onClick="logIn"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>